--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,4 +1,6 @@
 kaleido==0.2.1
+mypy==0.910
+mypy-extensions==0.4.3
 numpy==1.21.0
 pandas==1.3.0
 plotly==5.1.0
@@ -6,3 +8,5 @@ python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
 tenacity==8.0.0
+toml==0.10.2
+typing-extensions==3.10.0.0
