--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -39,7 +39,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: nordcloud-ecr
+        ECR_REPOSITORY: nordcloud
         IMAGE_TAG: latest
       run: |
         # Build a docker container and push it to ECR
